Commit for V0.1.10 - possibly last "feature" release before I start working on Combat Tracker

--- a/styles/rqg.css
+++ b/styles/rqg.css
@@ -23,7 +23,7 @@
   /* Attributes */
   /*font-family: 'Verdana';*/
   font-family: var(--main-text-font);
-  color: var(--main-text-color);
+  /*color: var(--main-text-color);*/
 }
 .rqg .window-content {
   height: 100%;
