--- a/templates/actor/npc-actor-sheet.html
+++ b/templates/actor/npc-actor-sheet.html
@@ -16,8 +16,8 @@
             <a class="unlock-character-sheet" title="{{localize 'RQG.LockSheet'}}"> <i class="fas fa-lock-open"></i></a>
         {{/if}}
         <a class="item actor-item" data-tab="summary">{{localize 'RQG.MainTab'}}</a>
-        <a class="item actor-item" data-tab="items">{{localize 'RQG.Items'}}</a>
-    </nav>
+        <a class="item actor-item" data-tab="items">{{localize 'RQG.Items'}}</a>  
+        <a class="item actor-item" data-tab="activeeffects">Effects</a></nav>
 
     {{!-- Sheet Body --}}
     <section class="sheet-body section-padding" style="grid-area:main;">
@@ -29,29 +29,9 @@
         <div class="tab items" data-group="primary" data-tab="items">
             {{> "systems/runequest/templates/actor/parts/character/actor-inventory.html"}}
         </div>
-        {{!-- Flags Tab --}}
-        <div class="tab flags" data-group="primary" data-tab="flags">
-            <ol class="skills-list">
-            {{#each actor.flags as |scope scopekey|}}
-                <div class="skill-category" data-skillcategory="{{skillcategory}}">
-                    <li class="item flexrow item-header">
-                        <div class="item-name">{{scopekey}}</div>
-                        <!-- <div class="item-controls">
-                            <a class="item-control item-create" title="Create item" data-type="skill" data-skillcategory="{{skillcategory}}"><i class="fas fa-plus"></i></a>
-                        </div> -->
-                    </li>
-                    {{#each scope as |flag flagkey|}}
-                        <li class="item flexrow" data-flag-key="{{flagkey}}">
-                            <h4 class="item-name">{{flag}}</h4>
-                            <!-- <div class="item-controls">
-                                <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
-                                <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
-                            </div> -->
-                        </li>
-                    {{/each}}
-                </div>
-            {{/each}}
-            </ol>
+        {{!-- Active Effects Tab --}}
+        <div class="tab activeeffects" data-group="primary" data-tab="activeeffects">
+            {{> "systems/runequest/templates/actor/parts/actor-activeeffectsv2.html"}}
         </div>
 
     </section>
