--- a/templates/actor/parts/character/actor-skills.html
+++ b/templates/actor/parts/character/actor-skills.html
@@ -1,3 +1,5 @@
+{{log "Displaying Skills:"}}
+{{log data}}
 <div class="summary-row flexrow">
     <div class="summary-runes-list flexcol">
         {{> "systems/runequest/templates/actor/parts/character/actor-partial-skilltable.html" skillcat="agility" skillList=data.skills.agility}}
