--- a/templates/item/item-sheet.html
+++ b/templates/item/item-sheet.html
@@ -18,6 +18,7 @@
     <nav class="sheet-tabs tabs" data-group="primary">
         <a class="item" data-tab="description">Description</a>
         <a class="item" data-tab="attributes">Attributes</a>
+        <a class="item actor-item" data-tab="activeeffects">Effects</a>
     </nav>
 
     {{!-- Sheet Body --}}
@@ -59,5 +60,9 @@
             {{/each}}
             </ol>
         </div>
+        {{!-- Active Effects Tab --}}
+        <div class="tab activeeffects" data-group="primary" data-tab="activeeffects">
+            {{> "systems/runequest/templates/actor/parts/actor-activeeffectsv2.html"}}
+        </div>        
     </section>
 </form>
